added the interfaces

--- a/templates/ForgotPassword.html
+++ b/templates/ForgotPassword.html
@@ -57,17 +57,9 @@
 
 <div class="container">
     <h2>Forgot Password</h2>
-    <form action="/forgotPassword" method="post">
+    <form action="/forgotPassword/" method="post">
         <input type="email" id="email" name="email" placeholder="Email" required>
-        <select id="securityQuestion" name="securityQuestion" required>
-            <option value="">Select Security Question</option>
-            <option value="favorite_pet">What is your favorite pet?</option>
-            <option value="school_learned_in">What is the name of the school you learned in?</option>
-            <option value="mother_maiden_name">What is your mother's maiden name?</option>
-            <option value="favorite_movie">What is your favorite movie?</option>
-        </select>
-        <input type="text" id="securityAnswer" name="securityAnswer" placeholder="Security Answer" required>
-        <input type="submit" value="Reset Password">
+    <input type="submit" value="Reset Password">
     </form>
     <div class="login-link">
         <p>Remembered your password? <a href="/login">Login</a></p>
