--- a/templates/Home.html
+++ b/templates/Home.html
@@ -61,7 +61,8 @@
 
 <div class="container">
     <h2>Login</h2>
-    <form action="/login" method="post">
+    <form action="/login/" method="post">
+        {% csrf_token %} <!-- Add CSRF token for security -->
         <input type="text" id="username" name="username" placeholder="Username" required>
         <input type="password" id="password" name="password" placeholder="Password" required>
         <input type="submit" value="Login">
