--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -62,6 +62,7 @@
 <div class="container">
     <h2>Sign Up</h2>
     <form action="/signup/" method="post">
+        {% csrf_token %}
         <input type="text" id="name" name="name" placeholder="First Name" required>
         <input type="text" id="lastName" name="lastName" placeholder="Last Name" required>
         <select id="status" name="status" onchange="showAdditionalFields(this.value)" required>
