--- a/templates/ForgotPassword.html
+++ b/templates/ForgotPassword.html
@@ -8,13 +8,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #b4beac; /* Light gray background for the entire page */
+            background-color: #b4beac;
         }
         .container {
             max-width: 400px;
             margin: 50px auto;
             padding: 20px;
-            background-color: #ffffff; /* Slightly darker background for the forgot password container */
+            background-color: #ffffff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
