--- a/templates/Login.html
+++ b/templates/Login.html
@@ -62,7 +62,7 @@
 <div class="container">
     <h2>Login</h2>
     <form action="/login/" method="post">
-        {% csrf_token %} <!-- Add CSRF token for security -->
+        {% csrf_token %}
         <input type="text" id="username" name="username" placeholder="Username" required>
         <input type="password" id="password" name="password" placeholder="Password" required>
         <input type="submit" value="Login">
