--- a/templates/MainForum.html
+++ b/templates/MainForum.html
@@ -126,9 +126,19 @@
     </div>
     <div class="container-content">
         <div class="user-details">
-            <p><strong>Name:</strong> {{ user.name }}</p>
-            <p><strong>Last Name:</strong> {{ user.last_name }}</p>
-            <!-- Add other user details here -->
+           {% if candidate %}
+            <!-- Display candidate details -->
+            <p><strong>Name:</strong> {{ candidate.first_name }}</p>
+            <p><strong>Last Name:</strong> {{ candidate.last_name }}</p>
+        {% elif student %}
+            <!-- Display student details -->
+            <p><strong>Name:</strong> {{ student.first_name }}</p>
+            <p><strong>Last Name:</strong> {{ student.last_name }}</p>
+        {% elif graduate %}
+            <!-- Display graduate details -->
+            <p><strong>Name:</strong> {{ graduate.first_name }}</p>
+            <p><strong>Last Name:</strong> {{ graduate.last_name }}</p>
+        {% endif %}
         </div>
         <div class="year-semester-select">
             <select id="year-select" onchange="showSemesterOptions()">
