--- a/templates/display_data.html
+++ b/templates/display_data.html
@@ -50,7 +50,7 @@
     <ul>
         {% for graduate in graduates %}
         <li>{{ graduate.first_name }} {{ graduate.last_name }} - Workplace: {{ graduate.work_place }}
-            - Email: {{ graduate.email }} - Password: {{ student.password }} id: {{ graduate.id }}</li>
+            - Email: {{ graduate.email }} - Password: {{ graduate.password }} id: {{ graduate.id }}</li>
         {% endfor %}
     </ul>
 
