--- a/templates/blog.detail.html
+++ b/templates/blog.detail.html
@@ -74,7 +74,7 @@
 
         <button class="create-post-button" onclick="toggleCreatePostForm()">Create Your Post</button>
 
-        <form id="create-post-form" method="post" action="{% url 'create_post' %}" style="display: none;">
+        <form id="create-post-form" method="post" action="{% url 'create_post' blog.id %}" style="display: none;">
             {% csrf_token %}
             <label for="title">Title:</label><br>
             <input type="text" id="title" name="title"><br>
