--- a/templates/MainForum.html
+++ b/templates/MainForum.html
@@ -183,50 +183,51 @@ button:hover {
             <div class="year">
                 <h2>שנה רביעית</h2>
                 <h3> 'סמסטר א </br>
-                    <button>Button 1</button> <br>
-                    <button>Button 2</button><br>
-                    <button>Button 3</button><br>
-                     <button>Button 4</button><br>
-                    <button>Button 5</button><br>
-                    </br>סמסטר ב <br><button>Button 1</button> <br>
-                    <button>Button 2</button><br>
-                    <button>Button 3</button><br>
-                     <button>Button 4</button><br>
-                    <button>Button 5</button><br></h3>
+                    <button>חישוביות וסיבוכיות</button> <br>
+                    <button>בטיחות תוכנה</button><br>
+                    </br>סמסטר ב <br><button>פרויקט גמר</button> <br></h3>
 
             </div>
             <div class="year">
                 <h2>שנה שלישית</h2>
-                <h3> 'סמסטר א </br><button>Button 1</button> <br>
-                    <button>Button 2</button><br>
-                    <button>Button 3</button><br>
-                     <button>Button 4</button><br>
-                    <button>Button 5</button><br>
-                    </br>סמסטר ב <br><button>Button 1</button> <br>
-                    <button>Button 2</button><br>
-                    <button>Button 3</button><br>
-                     <button>Button 4</button><br>
+                <h3> 'סמסטר א </br><button>מבוא לתקשורת מחשבים</button> <br>
+                    <button>בדיקות ואיכות בהנדסת תוכנה</button><br>
+                    <button>בסיסי נתונים</button><br>
+                     <button>אלגוריתמים 2</button><br>
+                    </br>סמסטר ב <br><button>מבוא לקומפילציה</button> <br>
+                    <button>מערכות הפעלה</button><br>
+                    <button>ניהול פרויקט תוכנה</button><br>
+                     <button>אבטחת נתונים</button><br>
+                    <button>רשתות תקשורת מחשבים</button><br>
                     <br></h3>
             </div>
             <div class="year">
                 <h2>שנה שניה</h2>
-                <h3> 'סמסטר א </br><button>Button 1</button> <br>
-                    <button>Button 2</button><br>
-                    <button>Button 3</button><br>
-                     <button>Button 4</button><br>
-                    </br>סמסטר ב <br><button>Button 1</button> <br>
-                    <button>Button 2</button><br>
-                    <button>Button 3</button><br>
-                     <button>Button 4</button><br>
-                    <button>Button 5</button><br></h3>
+                <h3> 'סמסטר א </br><button>עקרונות שפות תוכנה</button> <br>
+                     <button>מבנה נתונים</button><br>
+                    <button>אוטומטים ושפות פורמאליות</button><br>
+                     <button>יסודות הנדסת תוכנה</button><br>
+                    <button>מבוא לסטטיסטיקה והסתברות</button>
+                    </br>סמסטר ב <br><button>תכנות מונכה עצמים מתקדם</button> <br>
+                    <button>אלגוריתמים 1</button><br>
+                    <button>הנדסת דרישות וניתוח בהנדסת תוכנה</button><br>
+                     <button>אנליזה נומרית</button><br>
+
+                    <br></h3>
             </div>
             <div class="year">
                 <h2>שנה ראשונה</h2>
-                <h3> 'סמסטר א <br> <button>Button 1</button> <br>
-                    <button>Button 2</button><br>
-                    <button>Button 3</button><br>
-                    </br>'סמסטר ב  <br><button>Button 1</button> <br>
-                 <br></h3>
+                <h3> 'סמסטר א </br><button>מבוא למדעי המחשב</button> <br>
+                     <button>ארכיטקטורת מחשבים 1</button><br>
+                    <button> לוגיקה ונושאים דיסקרטים 1</button><br>
+                     <button>אלגברה לינארית 1</button><br>
+                    <button>חדו"א </button>
+                    </br>סמסטר ב <br><button>ארכיטקטורת מחשבים </button> <br>
+                    <button>תכנות מונחה עצמים</button><br>
+                    <button>לוגיקה ונושאים דיסקרטים 2</button><br>
+                     <button>פיזיקה להנדסת תוכנה</button><br>
+                    <button> חדו"א 2 </button><br>
+                    <br></h3>
             </div>
         </div>
     <div class="sidebar" id="sidebar">
