--- a/templates/MainForum.html
+++ b/templates/MainForum.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #d0b696;
+            background-color: #b8c1cc;
             margin: 0;
             padding: 0;
         }
@@ -18,7 +18,7 @@
         }
         header {
             background-color: #333333;
-            color: rgba(255, 168, 168, 0.9);
+            color: rgb(204, 227, 255);
             display: flex;
             justify-content: center; /* Center items horizontally */
             align-items: center;
@@ -140,7 +140,7 @@
         }
         .sidebar a {
             /* ... existing styles ... */
-            color: #ffa8a8; /* Change the color of the strings */
+            color: #bedcff; /* Change the color of the strings */
             padding-top: 30px;
         }
         button {
@@ -217,7 +217,8 @@ button:hover {
             </div>
             <div class="year">
                 <h2>שנה ראשונה</h2>
-                <h3> 'סמסטר א </br><button>מבוא למדעי המחשב</button> <br>
+                <h3> 'סמסטר א </br>
+                    <button onclick="location.href='/blog/1'">מבוא למדעי המחשב</button> <br>
                      <button>ארכיטקטורת מחשבים 1</button><br>
                     <button> לוגיקה ונושאים דיסקרטים 1</button><br>
                      <button>אלגברה לינארית 1</button><br>
