--- a/templates/Mavo.html
+++ b/templates/Mavo.html
@@ -5,25 +5,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>COURSE</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 20vh;
-    background-color: #f0f0f0;
-  }
-  h1 {
-    font-size: 3em;
-    color: #333;
-  }
+    h1{
+        text-align: center;
+        margin-top: 100px;
+        font-size: 45px;
+        color: #333;
+    }
+    h2{
+        text-align: center;
+        margin-top: 100px;
+        font-size: 45px;
+        color: #333;
+    }
+
+
 </style>
 </head>
+
 <body>
 
 <h1>מבוא למדעי המחשב</h1>
+<div class="container">
+  <h2>WELCOME TO THE COURSE</h2>
+ <img src="path_to_your_image.jpg" alt="Description of the image">
+  <p>מבוא למדעי המחשב הוא קורס המכיל מבוא למדעי המחשב ולתכנות בשפת פייתון. הקורס מיועד לסטודנטים שלא למדו תכנות בעבר ומעוניינים להכנס לתחום. הקורס מכיל תרגולים ומבחנים שבועיים ומטרתו להכניס את הסטודנטים לתחום תכנות ולהכין אותם לקורסים נוספים במדעי המחשב.</p>
+  <p>הקורס מכיל מבוא למדעי המחשב ולתכנות בשפת פייתון. הקורס מיועד לסטודנטים שלא למדו תכנות בעבר ומעוניינים להכנס לתחום. הקורס מכיל תרגולים ומבחנים שבועיים ומטרתו להכניס את הסטודנטים לתחום תכנות ולהכין אותם לקורסים נוספים במדעי המחשב.</p>
+  <p>
+</div>
 
 </body>
 </html>
