--- a/templates/MainForum.html
+++ b/templates/MainForum.html
@@ -178,40 +178,40 @@ button:hover {
          transform: translate(-50%, -50%);
          width: 200px;
          height: 50px;
-         ">פורום הנדסת תוכנה כללי</button> <br>
+         "onclick="location.href='/blog/32'">פורום הנדסת תוכנה כללי</button> <br>
         <div class="year-headers">
             <div class="year">
                 <h2>שנה רביעית</h2>
                 <h3> 'סמסטר א </br>
-                    <button>חישוביות וסיבוכיות</button> <br>
-                    <button>בטיחות תוכנה</button><br>
-                    </br>סמסטר ב <br><button>פרויקט גמר</button> <br></h3>
+                    <button onclick="location.href='/blog/29'">חישוביות וסיבוכיות</button> <br>
+                    <button onclick="location.href='/blog/30'">בטיחות תוכנה</button> <br>
+                    </br>סמסטר ב <br><button onclick="location.href='/blog/31'">פרויקט גמר</button></h3>
 
             </div>
             <div class="year">
                 <h2>שנה שלישית</h2>
-                <h3> 'סמסטר א </br><button>מבוא לתקשורת מחשבים</button> <br>
-                    <button>בדיקות ואיכות בהנדסת תוכנה</button><br>
-                    <button>בסיסי נתונים</button><br>
-                     <button>אלגוריתמים 2</button><br>
-                    </br>סמסטר ב <br><button>מבוא לקומפילציה</button> <br>
-                    <button>מערכות הפעלה</button><br>
-                    <button>ניהול פרויקט תוכנה</button><br>
-                     <button>אבטחת נתונים</button><br>
-                    <button>רשתות תקשורת מחשבים</button><br>
+                <h3> 'סמסטר א </br> <button onclick="location.href='/blog/20'">מבוא לתקשורת מחשבים</button> <br>
+                    <button onclick="location.href='/blog/21'">	בדיקות ואיכות בהנדסת תוכנה</button> <br>
+                    <button onclick="location.href='/blog/22'">	בסיסי נתונים</button> <br>
+                    <button onclick="location.href='/blog/23'">	אלגוריתמים 2</button> <br>
+                    </br>סמסטר ב <br><button onclick="location.href='/blog/24'">מבוא לקומפילציה</button> <br>
+                    <button onclick="location.href='/blog/25'">	מערכות הפעלה</button> <br>
+                    <button onclick="location.href='/blog/26'">ניהול פרויקט תוכנה</button> <br>
+                    <button onclick="location.href='/blog/27'">	אבטחת נתונים</button> <br>
+                    <button onclick="location.href='/blog/28'">	רשתות תקשורת מחשבים</button> <br>
                     <br></h3>
             </div>
             <div class="year">
                 <h2>שנה שניה</h2>
-                <h3> 'סמסטר א </br><button>עקרונות שפות תוכנה</button> <br>
-                     <button>מבנה נתונים</button><br>
-                    <button>אוטומטים ושפות פורמאליות</button><br>
-                     <button>יסודות הנדסת תוכנה</button><br>
-                    <button>מבוא לסטטיסטיקה והסתברות</button>
-                    </br>סמסטר ב <br><button>תכנות מונכה עצמים מתקדם</button> <br>
-                    <button>אלגוריתמים 1</button><br>
-                    <button>הנדסת דרישות וניתוח בהנדסת תוכנה</button><br>
-                     <button>אנליזה נומרית</button><br>
+                <h3> 'סמסטר א </br><button onclick="location.href='/blog/11'">עקרונות שפות תוכנה</button> <br>
+                    <button onclick="location.href='/blog/12'">מבנה נתונים</button> <br>
+                    <button onclick="location.href='/blog/13'">אוטומטים ושפות פורמאליות</button> <br>
+                    <button onclick="location.href='/blog/14'">יסודות הנדסת תוכנה</button> <br>
+                    <button onclick="location.href='/blog/15'">	מבוא לסטטיסטיקה והסתברות</button> <br>
+                    </br>סמסטר ב <br><button onclick="location.href='/blog/16'">תכנות מונחה עצמים מתקדם</button> <br>
+                    <button onclick="location.href='/blog/17'">	אלגוריתמים 1</button> <br>
+                    <button onclick="location.href='/blog/18'">הנדסת דרישות וניתוח בהנדסת תוכנה</button> <br>
+                    <button onclick="location.href='/blog/19'">אנליזה נומרית</button> <br>
 
                     <br></h3>
             </div>
@@ -219,15 +219,15 @@ button:hover {
                 <h2>שנה ראשונה</h2>
                 <h3> 'סמסטר א </br>
                     <button onclick="location.href='/blog/1'">מבוא למדעי המחשב</button> <br>
-                     <button>ארכיטקטורת מחשבים 1</button><br>
-                    <button> לוגיקה ונושאים דיסקרטים 1</button><br>
-                     <button>אלגברה לינארית 1</button><br>
-                    <button>חדו"א </button>
-                    </br>סמסטר ב <br><button>ארכיטקטורת מחשבים </button> <br>
-                    <button>תכנות מונחה עצמים</button><br>
-                    <button>לוגיקה ונושאים דיסקרטים 2</button><br>
-                     <button>פיזיקה להנדסת תוכנה</button><br>
-                    <button> חדו"א 2 </button><br>
+                    <button onclick="location.href='/blog/2'">ארכיטקטורת מחשבים 1</button> <br>
+                    <button onclick="location.href='/blog/3'">לוגיקה ונושאים דיסקרטים 1</button> <br>
+                    <button onclick="location.href='/blog/4'">אלגברה לינארית 1</button> <br>
+                    <button onclick="location.href='/blog/5'">חדו"א 1</button> <br>
+                    </br>סמסטר ב <br><button onclick="location.href='/blog/6'">ארכיטקטורת מחשבים 2</button> <br>
+                    <button onclick="location.href='/blog/7'">תכנות מונחה עצמים</button> <br>
+                    <button onclick="location.href='/blog/8'">לוגיקה ונושאים דיסקרטים 2</button> <br>
+                    <button onclick="location.href='/blog/9'">פיזיקה להנדסת תוכנה</button> <br>
+                    <button onclick="location.href='/blog/10'">חדו"א 2</button> <br>
                     <br></h3>
             </div>
         </div>
