--- a/templates/blog.detail.html
+++ b/templates/blog.detail.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,24 +27,45 @@
         }
 
         .post {
-            background-color: #f9f9f9;
-            border-radius: 5px;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
+    background-color: #c4c4bd;
+    border-radius: 5px;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 5);
+    position: relative;
+}
         .post h3 {
             margin-top: 0;
             color: #333;
         }
 
         .post p {
-            color: #666;
+            color: #000000;
         }
 
         .post-content {
             margin-top: 10px;
+        }
+
+        .post-info {
+            position: absolute;
+            top: 0;
+            right: 0;
+            display: flex;
+            justify-content: space-between;
+            width: auto;
+        }
+         .post-details {
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: flex;
+            justify-content: space-between;
+            width: auto;
+        }
+
+        .post-author, .post-date {
+            margin-right: 7px;
         }
 
         .create-post-button {
@@ -65,7 +85,9 @@
         #create-post-form {
             display: none;
         }
+
     </style>
+
 </head>
 <body>
 
@@ -91,17 +113,24 @@
             <h2>פוסטים:</h2>
             {% for post2 in posts2 %}
                 <div class="post">
+                    <div class="post-info">
+                        <span class="post-author">פורסם על ידי: {{ post2.user_name }}</span>
+                    </div>
+                    <div class="post-details">
+                       {% load tz %}
+<p>Posted on: {{ post2.date_posted|timezone:"Asia/Jerusalem"|date:"F j, Y, P" }}</p>
+                    </div>
+                    <br>
                     <h3>{{ post2.title }}</h3>
                     <p>{{ post2.content }}</p>
-                    <p>Posted by: {{ post2.user_name }}</p>
                     {% if post2.user_name == current_user %}
                         <form method="post" action="{% url 'delete_post' post2.id %}">
                             {% csrf_token %}
                             <button type="submit">Delete</button>
                         </form>
-                    <form action="{% url 'edit_post' post2.id %}" method="get">
-                        <button type="submit">Edit</button>
-                      </form>
+                        <form action="{% url 'edit_post' post2.id %}" method="get">
+                            <button type="submit">Edit</button>
+                        </form>
                     {% endif %}
                 </div>
             {% endfor %}
@@ -116,5 +145,3 @@
     </script>
 </body>
 </html>
-
-
